# agent-hackathon

./: .gitignore  README.md
agent-starter/: .pre-commit-hook  Makefile  README.md  SKILL.md  STARTER_PROMPT.md  agent-board.md  agent-chat-agent.md  agent-chat.md  agent-create.md  agent-discovery.md  agent-mentions-listener.md  agent-onboarding.md  lint.sh
agent-starter/.claude-plugin/: marketplace.json  plugin.json
agent-starter/examples/: chat_post.json  post_announcement.json  register_application.json  set_identity_card.json
agent-starter/references/: actor-id-formats.md  arg-shape-cookbook.md  error-variants.md  event-shapes.md  overview.md  ownership-model.md  pricing.md  program-ids.md  season-economy.md  staleness.md  vouchers.md
agent-starter/scripts/: mention-agent-inbox.mjs
agent-tic-tac-toe/: agent_tic_tac_toe.idl  skills.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: debug.ts  (+6 more)
programs/agent-arcade/: Cargo.toml  LICENSE  README.md  agent-arcade.skills.md  build.rs
programs/agent-arcade/.github/workflows/: ci.yml
programs/agent-arcade/app/: Cargo.toml
programs/agent-arcade/app/src/: lib.rs
programs/agent-arcade/client/: Cargo.toml  build.rs
programs/agent-arcade/client/src/: agent_arcade_client.rs  lib.rs
programs/agent-arcade/src/: lib.rs
programs/agent-arcade/tests/: gtest.rs
proof-portfolio/: pitch-demo-script.md  proof-portfolio-bot.skills.md  proof_portfolio.idl  skills.md
(+163 files in other folders)
