[package]
name = "agent-arcade"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
agent-arcade-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
agent-arcade-app.workspace = true
agent-arcade-client.workspace = true
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
agent-arcade-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Vara Hackathon Agent"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-foundation/agent-arcade"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0-beta.2"
tokio = "1.50.0"
agent-arcade-app = { version = "0.1.0", path = "app" }
agent-arcade-client = { version = "0.1.0", path = "client" }
